--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<meta charset="Shift_JIS">
+<meta charset="UTF-8">
 <head>
 <title>Samo's Movie</title>
 
@@ -16,7 +16,7 @@
 	<body class="kagami-1">
 		<main>
 			<section class="content content--full">
-				<h2 class="page-title">ƒNƒ\ƒRƒ“ƒeƒ“ƒc‚ðA‹M•û‚ÉB</h2>
+				<h2 class="page-title">ã‚¯ã‚½ã‚³ãƒ³ãƒ†ãƒ³ãƒ„ã‚’ã€è²´æ–¹ã«ã€‚</h2>
 				<div class="slideshow">
 					<div class="slide">
 						<div class="mirror" data-visible-area="0.85">
