--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <head>
 <title>Samo's Movie</title>
 
