--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <title>Samo's Movie</title>
 
                 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	        <link rel="stylesheet" href="css/footer.css">	
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/kagami.css" />
 		<link rel="stylesheet" type="text/css" href="css/mirror.css" />
+         	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
                 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 		<script>document.documentElement.className = 'js';</script>
 
 </head>
@@ -67,5 +70,56 @@
 
 		})();
                </script>
+
+		<footer class="footer-distributed">
+
+			<div class="footer-left">
+
+				<h3>Samo</h3>
+
+				<p class="footer-links">
+
+				<p class="footer-company-name">Samo &copy; 2017</p>
+			</div>
+
+			<div class="footer-center">
+
+				<div>
+					<i class="fa fa-coffee"></i>
+					<p><a href="https://ncode.syosetu.com/n8307dx/">記憶共有的異世界物語</a></p>
+				</div>
+
+				<div>
+					<i class="fa fa-comments-o"></i>
+			        	<p><a href="https://discordapp.com/invite/3Aw8pgf">Join my DISCORD!</a></p>
+				</div>
+
+				<div>
+					<i class="fa fa-skype"></i>
+					<p><a href="skype:sakamoto00011?add">My Skype</a></p>
+				</div>
+
+			</div>
+
+
+			<div class="footer-right">
+
+				<p class="footer-company-about">
+					<span>クリエイター【Samo】</span>
+					明確な目的も無しに、作りたいものを作り続ける学生クリエイターです。活動は各種サイト様にて公開していますので、下記リンクより是非どうぞ！
+				</p>
+
+				<div class="footer-icons">
+
+					<a href="https://twitter.com/sakamoto0011"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.instagram.com/samo.jp"><i class="fa fa-instagram"></i></a>
+					<a href="https://soundcloud.com/fsfdawhd1yw3"><i class="fa fa-soundcloud"></i></a>
+                                        <a href="https://www.youtube.com/channel/UCYWslm1OLQiT4auWAmbXuiQ?sub_confirmation=1"><i class="fa fa-youtube-play"></i></a>
+
+				</div>
+
+			</div>
+
+		</footer>
 </body>
 </html>
