--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
                 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-                <link rel="shortcut icon" href="img/favicon.ico">
+                <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 		<script>document.documentElement.className = 'js';</script>
 
 </head>
