--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
                 <script type="text/javascript" src="js/jquery.easing.min.js"></script>
 		<script type="text/javascript" src="js/jquery.fragmentscroll.min.js"></script>
 		<script type="text/javascript" src="js/jquery.sectionmenu.min.js"></script>
+　　　　　　　　<script src="js/flickity.pkgd.min.js"></script>
+
 	        <link rel="stylesheet" href="css/footer.css">	
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/jquery.sectionmenu.css" />
+　　　　　　　　<link rel="stylesheet" href="css/flickity.css">
+
 		<link rel="stylesheet" type="text/css" href="css/kagami.css" />
 		<link rel="stylesheet" type="text/css" href="css/mirror.css" />
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+
                 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400" />
                 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
                 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-                <link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+ 
+               <link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+
 		<script>document.documentElement.className = 'js';</script>
                 <script type="text/javascript">
 
@@ -89,6 +96,18 @@
 
 		})();
                </script>
+
+           <div class="carousel"
+            data-flickity='{ "autoPlay": true, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
+            <img src="img/SAMOSMAGIC.png" alt="Samo'sMAGIC" />
+            <img src="img/kiomono.png" alt="kiomono" />
+            <img src="img/3.png" alt="mugenloop" />
+            <img src="img/tabeyatu.png" alt="tabeyatu" />
+            <img src="img/last.jpeg" alt="MAGIicon" />
+            <img src="img/SamoRemix.jpg" alt="SamoRemix" />
+            <img src="img/oooon.png" alt="SamoRemix" />
+           </div>
+
 
 		<footer class="footer-distributed">
 
