--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             data-flickity='{ "autoPlay": true, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
             <img src="img/SAMOSMAGIC.png" alt="Samo'sMAGIC" />
             <img src="img/kiomono.png" alt="kiomono" />
-            <img src="img/3.png" alt="mugenloop" />
+            <img src="img/samoRADI.png" alt="SAMO'sRADIO" />
             <img src="img/tabeyatu.png" alt="tabeyatu" />
             <img src="img/last.jpeg" alt="MAGIicon" />
             <img src="img/SamoRemix.jpg" alt="SamoRemix" />
