--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                </script>
 
            <div class="carousel"
-            data-flickity='{ "autoPlay": true, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
+            data-flickity='{ "autoPlay": 1500, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
             <img src="img/SAMOSMAGIC.png" alt="Samo'sMAGIC" />
             <img src="img/kiomono.png" alt="kiomono" />
             <img src="img/samoRADI.png" alt="SAMO'sRADIO" />
