--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400" />
                 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
                 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
-	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-          	<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
+	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+          	<link href="http://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
  
                <link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 
