--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
 <title>Samo's Movie</title>
 
                 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	　　　　　　 <script src="js/flickity.pkgd.min.js"></script>
                 <script type="text/javascript" src="js/jquery.easing.min.js"></script>
 		<script type="text/javascript" src="js/jquery.fragmentscroll.min.js"></script>
 		<script type="text/javascript" src="js/jquery.sectionmenu.min.js"></script>
           	<script type="text/javascript" src="js/jquery.novacancy.js"></script>
+　　　　　　　　<script src="js/flickity.pkgd.min.js"></script>
 
 	        <link rel="stylesheet" href="css/footer.css">	
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/jquery.sectionmenu.css" />
-　　　　　　　       　<link rel="stylesheet" href="css/flickity.css">
+　　　　　　　　<link rel="stylesheet" href="css/flickity.css">
 
 		<link rel="stylesheet" type="text/css" href="css/kagami.css" />
 		<link rel="stylesheet" type="text/css" href="css/mirror.css" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	        <link rel="stylesheet" type="text/css" href="css/neon.css">
 
-                <link　href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" />
+                <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400" />
                 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
                 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
-	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-          	<link href="http://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+          	<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
+                <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
  
                <link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 
