--- a/index.html
+++ b/index.html
@@ -1,64 +1,69 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
-<meta charset="utf-8">
 <head>
-<title>Samo's Movie</title>
+        <meta charset="utf-8">
+        <title>Samo's Movie</title>
+        <script src="http://code.jquery.com/jquery-1.11.0.min.js">
+        </script>
+        <script src="js/jquery.easing.min.js" type="text/javascript">
+        </script>
+        <script src="js/jquery.fragmentscroll.min.js" type="text/javascript">
+        </script>
+        <script src="js/jquery.sectionmenu.min.js" type="text/javascript">
+        </script>
+        <script src="js/jquery.novacancy.js" type="text/javascript">
+        </script>
+</head>
+<body>
+        　　　　　　　　
+        <script src="js/flickity.pkgd.min.js">
+        </script>
+        <link href="css/footer.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
+        <link href="css/flickity.css" rel="stylesheet">
+        <link href="css/kagami.css" rel="stylesheet" type="text/css">
+        <link href="css/mirror.css" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet" type="text/css">
+        <link href="css/neon.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
+        <script>
+        document.documentElement.className = 'js';
+        </script> 
+        <script type="text/javascript">
 
-                <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-                <script type="text/javascript" src="js/jquery.easing.min.js"></script>
-		<script type="text/javascript" src="js/jquery.fragmentscroll.min.js"></script>
-		<script type="text/javascript" src="js/jquery.sectionmenu.min.js"></script>
-          	<script type="text/javascript" src="js/jquery.novacancy.js"></script>
-　　　　　　　　<script src="js/flickity.pkgd.min.js"></script>
+        $(window).load(function() {
+            $('body').sectionMenu().fragmentScroll();
+        });
 
-	        <link rel="stylesheet" href="css/footer.css">	
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/jquery.sectionmenu.css" />
-　　　　　　　　<link rel="stylesheet" href="css/flickity.css">
+        </script> 
+        <script type="text/javascript">
+        $(document).ready(function() {
+            $('#my').novacancy({
+                'reblinkProbability': 0.1,
+                'blinkMin': 0.2,
+                'blinkMax': 0.6,
+                'loopMin': 8,
+                'loopMax': 10,
+                'color': '#ffffff',
+                'glow': ['0 0 80px #ffffff', '0 0 30px #008000', '0 0 6px #0000ff']
+            }); 
 
-		<link rel="stylesheet" type="text/css" href="css/kagami.css" />
-		<link rel="stylesheet" type="text/css" href="css/mirror.css" />
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	        <link rel="stylesheet" type="text/css" href="css/neon.css">
-
-                <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400" />
-                <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-                <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
-	        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-          	<link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
-                <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
- 
-               <link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
-
-		<script>document.documentElement.className = 'js';</script>
-                <script type="text/javascript">
-
-		$(window).load(function() {
-			$('body').sectionMenu().fragmentScroll();
-		});
-
-		</script>
-              
-          	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#my').novacancy({
-				'reblinkProbability': 0.1,
-				'blinkMin': 0.2,
-				'blinkMax': 0.6,
-				'loopMin': 8,
-				'loopMax': 10,
-				'color': '#ffffff',
-				'glow': ['0 0 80px #ffffff', '0 0 30px #008000', '0 0 6px #0000ff']
-			}); 
-
-			$('#work').novacancy({
-				'blink': 1,
-				'off': 1,
-				'color': 'Red',
-				'glow': ['0 0 80px Red', '0 0 30px FireBrick', '0 0 6px DarkRed']
-			});
-		});
-	</script>
+            $('#work').novacancy({
+                'blink': 1,
+                'off': 1,
+                'color': 'Red',
+                'glow': ['0 0 80px Red', '0 0 30px FireBrick', '0 0 6px DarkRed']
+            });
+        });
+        </script>
 
 </head>
 
