--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
         </script>
         <script src="js/jquery.novacancy.js" type="text/javascript">
         </script>
+
+	<!-- IE HTML 修復 -->
+       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+
 </head>
 <body>
         　　　　　　　　
         <script src="js/flickity.pkgd.min.js">
         </script>
+	<link rel="stylesheet" href="css/html5doctor.css" type="text/css" media="screen,print">
         <link href="css/footer.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
