--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         　　　　　　　　
         <script src="js/flickity.pkgd.min.js">
         </script>
-	<link rel="stylesheet" href="css/html5doctor.css" type="text/css" media="screen,print">
-        <link href="css/footer.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
-        <link href="css/flickity.css" rel="stylesheet">
-        <link href="css/kagami.css" rel="stylesheet" type="text/css">
-        <link href="css/mirror.css" rel="stylesheet" type="text/css">
-        <link href="css/normalize.css" rel="stylesheet" type="text/css">
-        <link href="css/neon.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="{{site.github.url}}/css/html5doctor.css" type="text/css" media="screen,print">
+        <link href="{{site.github.url}}/css/footer.css" rel="stylesheet">
+        <link href="{{site.github.url}}/css/style.css" rel="stylesheet">
+        <link href="{{site.github.url}}/css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
+        <link href="{{site.github.url}}/css/flickity.css" rel="stylesheet">
+        <link href="{{site.github.url}}/css/kagami.css" rel="stylesheet" type="text/css">
+        <link href="{{site.github.url}}/css/mirror.css" rel="stylesheet" type="text/css">
+        <link href="{{site.github.url}}/css/normalize.css" rel="stylesheet" type="text/css">
+        <link href="{{site.github.url}}/css/neon.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         rel="stylesheet">
