--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <title>Samo's Movie</title>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js">
         </script>
-        <script src="samosmovie/js/jquery.easing.min.js" type="text/javascript">
+        <script src="js/jquery.easing.min.js" type="text/javascript">
         </script>
-        <script src="samosmovie/js/jquery.fragmentscroll.min.js" type="text/javascript">
+        <script src="js/jquery.fragmentscroll.min.js" type="text/javascript">
         </script>
-        <script src="samosmovie/js/jquery.sectionmenu.min.js" type="text/javascript">
+        <script src="js/jquery.sectionmenu.min.js" type="text/javascript">
         </script>
-        <script src="samosmovie/js/jquery.novacancy.js" type="text/javascript">
+        <script src="js/jquery.novacancy.js" type="text/javascript">
         </script>
 
 	<!-- IE HTML 修復 -->
@@ -20,17 +20,17 @@
 </head>
 <body>
         　　　　　　　　
-        <script src="samosmovie/js/flickity.pkgd.min.js">
+        <script src="js/flickity.pkgd.min.js">
         </script>
-	<link rel="stylesheet" href="samosmovie/css/html5doctor.css" type="text/css" media="screen,print">
-        <link href="samosmovie/css/footer.css" rel="stylesheet">
-        <link href="samosmovie/css/style.css" rel="stylesheet">
-        <link href="samosmovie/css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
-        <link href="samosmovie/css/flickity.css" rel="stylesheet">
-        <link href="samosmovie/css/kagami.css" rel="stylesheet" type="text/css">
-        <link href="samosmovie/css/mirror.css" rel="stylesheet" type="text/css">
-        <link href="samosmovie/css/normalize.css" rel="stylesheet" type="text/css">
-        <link href="samosmovie/css/neon.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/html5doctor.css" type="text/css" media="screen,print">
+        <link href="css/footer.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
+        <link href="css/flickity.css" rel="stylesheet">
+        <link href="css/kagami.css" rel="stylesheet" type="text/css">
+        <link href="css/mirror.css" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet" type="text/css">
+        <link href="css/neon.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         rel="stylesheet">
@@ -38,7 +38,7 @@
         <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link href="samosmovie/img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
+        <link href="img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
         <script>
         document.documentElement.className = 'js';
         </script> 
@@ -92,10 +92,10 @@
                                         <div class="mirror" data-visible-area="0.85">
                                                 <div class="mirror__side mirror__side--one">
                                                 <img alt="Some image" class="mirror__img" src=
-                                                "samosmovie/img/1.png"></div>
+                                                "img/1.png"></div>
                                                 <div class="mirror__side mirror__side--two">
                                                 <img alt="Some image" class="mirror__img" src=
-                                                "samosmovie/img/1.png"></div>
+                                                "img/1.png"></div>
                                         </div>
                                         <h2 class="slide__title">Samo</h2>
                                 </div>
@@ -106,10 +106,10 @@
                         </div>
                 </section>
         </main>
-		<script src="samosmovie/js/imagesloaded.pkgd.min.js"></script>
-		<script src="samosmovie/js/anime.min.js"></script>
-		<script src="samosmovie/js/mirrorFx.js"></script>
-		<script src="samosmovie/js/slideshow.js"></script>
+		<script src="js/imagesloaded.pkgd.min.js"></script>
+		<script src="js/anime.min.js"></script>
+		<script src="js/mirrorFx.js"></script>
+		<script src="js/slideshow.js"></script>
 		<script>
 		(function() {
 		        function init() {
@@ -137,12 +137,12 @@
 	</div>
            <div class="carousel"
             data-flickity='{ "autoPlay": 1500, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
-            <img src="samosmovie/img/SAMOSMAGIC.png" alt="Samo'sMAGIC" />
-            <img src="samosmovie/img/kiomono.png" alt="kiomono" />
-            <img src="samosmovie/img/samoRADI.png" alt="SAMO'sRADIO" />
-            <img src="samosmovie/img/tabeyatu.png" alt="tabeyatu" />
-            <img src="samosmovie/img/last.jpeg" alt="MAGIicon" />
-            <img src="samosmovie/img/SamoRemix.jpg" alt="SamoRemix" />
+            <img src="img/SAMOSMAGIC.png" alt="Samo'sMAGIC" />
+            <img src="img/kiomono.png" alt="kiomono" />
+            <img src="img/samoRADI.png" alt="SAMO'sRADIO" />
+            <img src="img/tabeyatu.png" alt="tabeyatu" />
+            <img src="img/last.jpeg" alt="MAGIicon" />
+            <img src="img/SamoRemix.jpg" alt="SamoRemix" />
            </div>
 
 		<footer class="footer-distributed">
