--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         </script>
         <script src="./js/jquery.sectionmenu.min.js" type="text/javascript">
         </script>
+        <script src="./js/jquery.novacancy.js" type="text/javascript">
+        </script>
 
 	<!-- IE HTML 修復 -->
        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,16 +24,16 @@
         </script>
 	<link rel="stylesheet" href="./css/html5doctor.css" type="text/css" media="screen,print">
         <link href="./css/footer.css" rel="stylesheet">
+        <link href="./css/neon.css" rel="stylesheet" type="text/css">
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
         <link href="./css/flickity.css" rel="stylesheet">
         <link href="./css/kagami.css" rel="stylesheet" type="text/css">
         <link href="./css/mirror.css" rel="stylesheet" type="text/css">
         <link href="./css/normalize.css" rel="stylesheet" type="text/css">
-        <link href="./css/neon.css" rel="stylesheet" type="text/css">
+
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
@@ -128,9 +130,6 @@
 		        });
 		})();    
 　　　　　　　　 </script>
-
-        <script src="./js/jquery.novacancy.js" type="text/javascript">
-        </script>
 
 	<div class="board">
 	    <p id="my">My</p>
