--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		})();    
 　　　　　　　　 </script>
 
-	<div class="board">
+	<div class="neon">
 	    <p id="my">My</p>
             <p id="work">Work</p>
 	</div>
