--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet">
-        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-        <link href="http://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cookie|Indie+Flower|Monoton|Raleway" rel="stylesheet"> 
         <link href="./img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
         <script>
         document.documentElement.className = 'js';
