--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Samo's Movie</title>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js">
         </script>
-        <script src="./js/jquery.novacancy.js" type="text/javascript">
+        <script src="./js/neon.js" type="text/javascript">
         </script>
         <script src="./js/jquery.easing.min.js" type="text/javascript">
         </script>
