--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
         <link href="./css/mirror.css" rel="stylesheet" type="text/css">
         <link href="./css/normalize.css" rel="stylesheet" type="text/css">
 
+        <script type="text/javascript">
+        $(document).ready(function() {
+                $('#my').novacancy({
+                        'reblinkProbability': 0.1,
+                        'blinkMin': 0.2,
+                        'blinkMax': 0.6,
+                        'loopMin': 8,
+                        'loopMax': 10,
+                        'color': '#ffffff',
+                        'glow': ['0 0 80px #ffffff',
+                                '0 0 30px #008000',
+                                '0 0 6px #0000ff'
+                        ]
+                });
+                $('#work').novacancy({
+                        'blink': 1,
+                        'off': 1,
+                        'color': 'Red',
+                        'glow': ['0 0 80px Red',
+                                '0 0 30px FireBrick',
+                                '0 0 6px DarkRed'
+                        ]
+                });
+        });
+        </script>
+
+
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cookie|Indie+Flower|Monoton|Raleway" rel="stylesheet"> 
@@ -175,31 +202,16 @@
 
 		</footer>
 
-        <script type="text/javascript">
-        $(document).ready(function() {
-                $('#my').novacancy({
-                        'reblinkProbability': 0.1,
-                        'blinkMin': 0.2,
-                        'blinkMax': 0.6,
-                        'loopMin': 8,
-                        'loopMax': 10,
-                        'color': '#ffffff',
-                        'glow': ['0 0 80px #ffffff',
-                                '0 0 30px #008000',
-                                '0 0 6px #0000ff'
-                        ]
-                });
-                $('#work').novacancy({
-                        'blink': 1,
-                        'off': 1,
-                        'color': 'Red',
-                        'glow': ['0 0 80px Red',
-                                '0 0 30px FireBrick',
-                                '0 0 6px DarkRed'
-                        ]
-                });
-        });
-        </script>
+<style>
+SPAN#my .novacancy.on { color: #ffffff;text-shadow: 0 0 80px #ffffff,0 0 30px #008000,0 0 6px #0000ff; }
+SPAN#my .novacancy.off { color: #ffffff; opacity: 0.3; }
+</style>
+
+<style>
+SPAN#work .novacancy.on { color: Red;text-shadow: 0 0 80px Red,0 0 30px FireBrick,0 0 6px DarkRed; }
+SPAN#work .novacancy.off { color: Red; opacity: 0.3; }
+
+</style>
 
 </body>
 </html>
