--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
 　　　　　　　　 </script>
 
 	<div class="neon">
-	    <p id="my">My</p>
-            <p id="work">Work</p>
+        <h1>
+	    <span id="my">My</span>
+            <span id="work">Work</span>
+        </h1>
 	</div>
            <div class="carousel"
             data-flickity='{ "autoPlay": 1500, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
