--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
         <link href="./css/mirror.css" rel="stylesheet" type="text/css">
         <link href="./css/normalize.css" rel="stylesheet" type="text/css">
 
-       <script src="./js/jquery.novacancy.min.js" type="text/javascript">
-        </script>
-
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cookie|Indie+Flower|Monoton|Raleway" rel="stylesheet"> 
@@ -89,6 +86,8 @@
 		<script src="./js/anime.min.js"></script>
 		<script src="./js/mirrorFx.js"></script>
 		<script src="./js/slideshow.js"></script>
+                <script src="./js/jquery.novacancy.min.js" ></script>
+
 		<script>
 		(function() {
 		        function init() {
