--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script src="./js/jquery.sectionmenu.min.js" type="text/javascript">
         </script>
 
-        <script src="./js/novacancy.js" type="text/javascript">
+        <script src="./js/jquery.novacancy.js" type="text/javascript">
         </script>
 
 	<!-- IE HTML 修復 -->
