--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="http://code.jquery.com/jquery-1.11.0.min.js">
         </script>
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
         </script>
 
         <script src="./js/jquery.easing.min.js" type="text/javascript">
@@ -19,7 +19,7 @@
         <script src="./js/jquery.sectionmenu.min.js" type="text/javascript">
         </script>
 
-        <script src="./test/jquery.novacancy.js" type="text/javascript">
+        <script src="./js/novacancy.js" type="text/javascript">
         </script>
 
 	<!-- IE HTML 修復 -->
