--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Samo's Movie</title>
 
-        <script src="http://code.jquery.com/jquery-1.11.0.min.js">
+        <script src="./js/jquery-3.2.1.min.js">
         </script>
 
         <script src="./js/jquery.easing.min.js" type="text/javascript">
@@ -20,7 +20,7 @@
         </script>
 
 	<!-- IE HTML 修復 -->
-       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+       <script src="./js/html5shiv.js"></script>
 
 </head>
 <body>
