--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Samo's Movie</title>
 
         <script src="./js/jquery-3.2.1.min.js">
@@ -19,6 +21,9 @@
         <script src="./js/novacancy.js" type="text/javascript">
         </script>
 
+	<script src="js/modernizr-2.6.2.min.js">
+        </script>
+
 	<!-- IE HTML 修復 -->
        <script src="./js/html5shiv.js"></script>
 
@@ -27,7 +32,8 @@
         　　　　　　　　
         <script src="./js/flickity.pkgd.min.js">
         </script>
-	<link rel="stylesheet" href="./css/html5doctor.css" type="text/css" media="screen,print">
+	<link href="./css/bootstrap.css" rel="stylesheet">
+	<link href="./css/html5doctor.css" rel="stylesheet" type="text/css" media="screen,print">
         <link href="./css/footer.css" rel="stylesheet">
         <link href="./css/neon.css" rel="stylesheet" type="text/css">
         <link href="./css/style.css" rel="stylesheet">
@@ -139,6 +145,12 @@
 
 	<div class="neon">
         <h1>
+	    <span id="my">Introduction</span>
+        </h1>
+	</div>
+
+	<div class="neon">
+        <h1>
 	    <span id="my">My</span>
             <span id="work">Work</span>
         </h1>
@@ -171,7 +183,7 @@
 
 				<div>
 					<i class="fa fa-coffee"></i>
-					<p><a href="https://ncode.syosetu.com/n8307dx/">記憶共有的異世界物語</a></p>
+					<p><a href="https://ncode.syosetu.com/s2634d/">キオモノシリーズ（小説）</a></p>
 				</div>
 
 				<div>
