--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <script src="./js/novacancy.js" type="text/javascript">
         </script>
 
-	<script src="js/modernizr-2.6.2.min.js">
+	<script src="./js/modernizr-2.6.2.min.js">
+        </script>
+
+	<script src="./js/swiper.js">
         </script>
 
 	<!-- IE HTML 修復 -->
@@ -36,6 +39,7 @@
 	<link href="./css/html5doctor.css" rel="stylesheet" type="text/css" media="screen,print">
         <link href="./css/footer.css" rel="stylesheet">
         <link href="./css/neon.css" rel="stylesheet" type="text/css">
+        <link href="./css/swiper.css" rel="stylesheet" type="text/css">
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
         <link href="./css/flickity.css" rel="stylesheet">
@@ -149,6 +153,40 @@
         </h1>
 	</div>
 
+ <div class="swiper-container">
+    <div class="swiper-wrapper">
+
+      <div class="swiper-slide">
+      <span style="">
+      <img src="./img/kore.jpg" width="300" height="300" alt="">
+      <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://www.youtube.com/channel/UCYWslm1OLQiT4auWAmbXuiQ?sub_confirmation=1">Samo</a></h1>
+　　　<p>クリエイター。１５歳。</p><br><p>明確な目的も持たず</p><p>更なる技術を求め続ける変態</p>
+      </br>
+      </span>
+      </div>
+
+      <div class="swiper-slide">
+      <span style="">
+      <img src="./img/magic.jpeg" width="300" height="300" alt="">
+      <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://www.youtube.com/playlist?list=PL2-kedNFod8p-b9Hc5Iyky4Wa-sf-DWRb">Samo(マジック）</a></h1>
+　　　<p>趣味マジシャン。</p><br><p>ビジュアルエフェクト大好き</p><p>shin limのマジックに憧れている</p>
+      </br>
+      </span>
+      </div>
+
+      <div class="swiper-slide">
+      <span style="">
+      <img src="./img/SamoRemix.jpg" width="300" height="300" alt="">
+      <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://soundcloud.com/fsfdawhd1yw3">SamoRemix</a></h1>
+　　　<p>DTM大好き人間</p><br><p>Arp系の音源がお気に入り</p><p>Neku師に憧れている</p>
+      </br>
+      </span>
+      </div>
+
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+</div>
+
 	<div class="neon">
         <h1>
 	    <span id="my">My</span>
@@ -220,5 +258,19 @@
 			</div>
 
 		</footer>
+
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      pagination: {
+        el: '.swiper-pagination',
+        dynamicBullets: true,
+      },
+     autoplay: {
+        delay: 4500,
+        disableOnInteraction: false,
+      },
+    });
+  </script>
+
 </body>
 </html>
