--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <img src="./img/kiomono.png" alt="kiomono" />
             <img src="./img/samoRADI.png" alt="SAMO'sRADIO" />
             <img src="./img/tabeyatu.png" alt="tabeyatu" />
-            <img src="./img/last.jpeg" alt="MAGIicon" />
+            <img src="./img/magic.jpeg" alt="MAGIicon" />
             <img src="./img/SamoRemix.jpg" alt="SamoRemix" />
            </div>
 
