--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="swiper-slide">
       <span style="">
       <img src="./img/kore.jpg" width="300" height="300" alt="">
-      <span style="font-family : 'Cookie'"><h1><a href="https://www.youtube.com/channel/UCYWslm1OLQiT4auWAmbXuiQ?sub_confirmation=1">Samo</a></h1>
+      <span style="font-family : 'Cookie'; font-size: 18pt"><h1><a href="https://www.youtube.com/channel/UCYWslm1OLQiT4auWAmbXuiQ?sub_confirmation=1">Samo</a></h1></span>
 　　　<span style="font-family : 'ＭＳ Ｐ明朝'"><p>クリエイター。１５歳。</p><br><p>明確な目的も持たず</p><p>更なる技術を求め続ける変態</p>
       </br>
       </span>
