--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <span style="">
       <img src="./img/magic.jpeg" width="300" height="300" alt="">
       <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://www.youtube.com/playlist?list=PL2-kedNFod8p-b9Hc5Iyky4Wa-sf-DWRb">Samo(マジック）</a></h1>
-　　　<p>趣味マジシャン。</p><br><p>ビジュアルエフェクト大好き</p><p>shin limのマジックに憧れている</p>
+　　　<p>趣味マジシャン。</p><br><p>ビジュアルエフェクト大好き</p><p>クローズアップがメイン</p>
       </br>
       </span>
       </div>
@@ -178,7 +178,7 @@
       <span style="">
       <img src="./img/SamoRemix.jpg" width="300" height="300" alt="">
       <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://soundcloud.com/fsfdawhd1yw3">SamoRemix</a></h1>
-　　　<p>DTM大好き人間</p><br><p>Arp系の音源がお気に入り</p><p>Neku師に憧れている</p>
+　　　<p>DTM大好き人間</p><br><p>Arp系の音源がお気に入り</p><p>Remix作品をメインとしているが、作曲もしている</p>
       </br>
       </span>
       </div>
