--- a/RADIO.html
+++ b/RADIO.html
@@ -72,8 +72,14 @@ $(document).scroll(function(){
 
 <div class="movie-wrap">
        <iframe width="640" height="340" src="https://www.youtube.com/embed/live_stream?channel=UCYWslm1OLQiT4auWAmbXuiQ&autoplay=1" frameborder="0" allowfullscreen></iframe>
-
 </div>
+
+         <div class="RADblock"> 
+        <iframe allowfullscreen="" frameborder="0" height="270" src="https://www.youtube.com/live_chat?v=live&embed_domain=samosmovie.github.io" width="350">
+         </div>
+         </div>
+　　　　 </div>
+
 
 	<div class="neon">
         <h1>
