--- a/RADIO.html
+++ b/RADIO.html
@@ -68,6 +68,7 @@ $(document).scroll(function(){
         <link href="./css/RADIO.css" rel="stylesheet">
         <link href="./css/neon.css" rel="stylesheet" type="text/css">
         <link href="kokoro.css" rel="stylesheet" type="text/css">
+        <link href="./img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
 
 
 <div class="movie-wrap">
