--- a/RADIO.html
+++ b/RADIO.html
@@ -66,15 +66,27 @@ $(document).scroll(function(){
 	<link href="./css/html5doctor.css" rel="stylesheet" type="text/css" media="screen,print">
         <link href="./css/footer.css" rel="stylesheet">
         <link href="./css/RADIO.css" rel="stylesheet">
+        <link href="./css/menu.css" rel="stylesheet" type="text/css">
         <link href="./css/neon.css" rel="stylesheet" type="text/css">
         <link href="kokoro.css" rel="stylesheet" type="text/css">
         <link href="./img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
 
-
-<div class="movie-wrap">
-       <iframe width="640" height="340" src="https://www.youtube.com/embed/live_stream?channel=UCYWslm1OLQiT4auWAmbXuiQ&autoplay=1" frameborder="0" allowfullscreen></iframe>
-</div>
-
+<nav>
+  <ul>
+    <li>
+      <a href="index.html">メイン</a>
+    </li>
+    <li>
+      <a href="#">さもについて</a>
+    </li>
+    <li>
+      <a href="RADIO.html">さもらじ</a>
+    </li>
+    <li>
+      <a href="#">キオモノシリーズ</a>
+    </li>
+  </ul>
+</nav>
 
 	<div class="neon">
         <h1>
@@ -82,6 +94,10 @@ $(document).scroll(function(){
             <span id="radio">RADIO</span>
         </h1>
 	</div>
+
+<div class="movie-wrap">
+       <iframe width="640" height="340" src="https://www.youtube.com/embed/live_stream?channel=UCYWslm1OLQiT4auWAmbXuiQ&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
          <div class="RADblock"> 
 
