--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <link href="./css/footer.css" rel="stylesheet">
         <link href="./css/neon.css" rel="stylesheet" type="text/css">
         <link href="./css/swiper.css" rel="stylesheet" type="text/css">
+        <link href="./css/menu.css" rel="stylesheet" type="text/css">
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
         <link href="./css/flickity.css" rel="stylesheet">
@@ -75,7 +76,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Cookie|Indie+Flower|Monoton|Raleway" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Cookie|Indie+Flower|Monoton|Raleway|Open+Sans" rel="stylesheet"> 
         <link href="./img/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
 
         <script>
@@ -93,12 +94,24 @@
 
 </head>
 
+<nav>
+  <ul>
+    <li>
+      <a href="index.html">メイン</a>
+    </li>
+    <li>
+      <a href="#">さもについて</a>
+    </li>
+    <li>
+      <a href="RADIO.html">さもらじ</a>
+    </li>
+    <li>
+      <a href="#">キオモノシリーズ</a>
+    </li>
+  </ul>
+</nav>
+
 	<body class="kagami-1">
-		<div id="nav">
-			<div class="container">
-				<h1>Samo's <span>Room</span></h1>
-			</div>
-		</div>
         <main>
                 <section class="content content--full">
                         <h2 class="page-title">クソコンテンツを、貴方に。</h2>
